app/eventyay/static/api/css/api.css
body {
  font-size: 16px;
}
.navbar {
  height: 50px;
  color: var(--color-primary);
  background-color: var(--color-offwhite);
  border-bottom: 4px var(--color-primary) solid;
  border-top: none;
  padding: 0.25rem;
  box-shadow: var(--shadow-lighter);
  z-index: 200;
  font-family: var(--font-family-title);
}
.navbar .nav li.navbar-text,
.navbar .navbar-brand,
.navbar .navbar-brand:hover {
  color: var(--color-primary);
}
.navbar .navbar-brand {
  display: flex;
  align-items: center;
  color: var(--color-primary);
  padding: 0 !important;
  font-size: 20px;
  line-height: 30px;
}
.navbar-brand img {
  height: 30px;
  width: auto;
  margin-right: 8px;
  margin-top: -6px;
}
.navbar-brand span {
  margin-top: -10px;
}
.navbar .container {
  width: 100%;
}
.navbar-nav.pull-right {
  font-family: var(--font-family);
  li {
    margin-top: 8px;
  }
}
a.js-tooltip,
.btn-group {
  height: 34px;
  font-size: 14px;
  border-radius: var(--size-border-radius);
}
/* Fix navbar overlapping modal */
.modal {
  z-index: 2000 !important;
}

.modal-backdrop {
  z-index: 1990 !important;
}

